--- a/openshift/deployment.yaml
+++ b/openshift/deployment.yaml
@@ -1,50 +1,66 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fp-frontend
-  namespace: final-app-deployment
-  labels:
-    app: fp-frontend
+    name: frontend-service
+    namespace: one-gate-payment
+    labels:
+        app: frontend-service
+        version: "1.0.0"
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: fp-frontend
-  template:
-    metadata:
-      labels:
-        app: fp-frontend
-    spec:
-      containers:
-        - name: fp-frontend
-          image:  
-          ports:
-            - containerPort: 9002
-          imagePullSecrets:
-            - name: dockerhub-secret
-          env:
-            - name: POSTGRES_URL
-              valueFrom:
-                secretKeyRef:
-                  name: fp-frontend-secret
-                  key: POSTGRES_URL
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: fp-frontend-secret
-                  key: JWT_SECRET
-            - name: NEXT_PUBLIC_APP_URL
-              valueFrom:
-                secretKeyRef:
-                  name: fp-frontend-secret
-                  key: NEXT_PUBLIC_APP_URL
-            - name: NEXT_PUBLIC_SHOPEEPAY_URL
-              valueFrom:
-                secretKeyRef:
-                  name: fp-frontend-secret
-                  key: NEXT_PUBLIC_SHOPEEPAY_URL
-            - name: NEXT_PUBLIC_GOPAY_URL
-              valueFrom:
-                secretKeyRef:
-                  name: fp-frontend-secret
-                  key: NEXT_PUBLIC_GOPAY_URL
+    replicas: 2
+    selector:
+        matchLabels:
+            app: frontend-service
+    template:
+        metadata:
+            labels:
+                app: frontend-service
+                version: "1.0.0"
+        spec:
+            containers:
+                - name: frontend-service
+                  image: image-registry.openshift-image-registry.svc:5000/one-gate-payment/frontend-service:latest
+                  ports:
+                      - containerPort: 3000
+                        protocol: TCP
+                  resources:
+                      requests:
+                          memory: "256Mi"
+                          cpu: "200m"
+                      limits:
+                          memory: "512Mi"
+                          cpu: "500m"
+                  env:
+                      - name: NODE_ENV
+                        value: "production"
+                      - name: PORT
+                        value: "3000"
+                      - name: HOSTNAME
+                        value: "0.0.0.0"
+                      - name: NEXT_TELEMETRY_DISABLED
+                        value: "1"
+                      - name: API_BASE_URL
+                        value: "https://kong-proxy-one-gate-payment.apps.ocp-one-gate-payment.skynux.fun"
+                      - name: ENVIRONMENT
+                        value: "production"
+                  livenessProbe:
+                      httpGet:
+                          path: /api/health
+                          port: 3000
+                      initialDelaySeconds: 30
+                      periodSeconds: 30
+                      timeoutSeconds: 5
+                      failureThreshold: 3
+                  readinessProbe:
+                      httpGet:
+                          path: /api/health
+                          port: 3000
+                      initialDelaySeconds: 15
+                      periodSeconds: 10
+                      timeoutSeconds: 3
+                      failureThreshold: 3
+                  imagePullPolicy: Always
+                  securityContext:
+                      runAsNonRoot: true
+                      runAsUser: 1001
+                      runAsGroup: 1001
