--- a/openshift/service.yaml
+++ b/openshift/service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fp-frontend-service
-  namespace: final-app-deployment
+  name: frontend-service
+  namespace: one-gate-payment
   labels:
-    app: fp-frontend
+    app: frontend-service
 spec:
   selector:
-    app: fp-frontend
+    app: frontend-service
   ports:
-    - protocol: TCP
-      port: 9002
-      targetPort: 9002
+    - name: http
+      port: 3000
+      targetPort: 3000
+      protocol: TCP
   type: ClusterIP
