--- a/openshift/deployment.yaml
+++ b/openshift/deployment.yaml
@@ -26,10 +26,9 @@ spec:
                   resources:
                       requests:
                           memory: "256Mi"
-                          cpu: "200m"
                       limits:
                           memory: "512Mi"
-                          cpu: "500m"
+                          cpu: "1"
                   env:
                       - name: NODE_ENV
                         value: "production"
