--- a/openshift/deployment.yaml
+++ b/openshift/deployment.yaml
@@ -26,9 +26,10 @@ spec:
                   resources:
                       requests:
                           memory: "256Mi"
+                          cpu: "300m"
                       limits:
                           memory: "512Mi"
-                          cpu: "1"
+                          cpu: "400m"
                   env:
                       - name: NODE_ENV
                         value: "production"
