--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --coverage --watchAll=false --ci"
+    "test:ci": "jest --coverage --watchAll=false --ci",
+    "test:ui": "jest --testPathPattern=components/ui",
+    "test:pages": "jest --testPathPattern=app/.*page",
+    "test:api": "jest --testPathPattern=api/.*route",
+    "test:hooks": "jest --testPathPattern=hooks",
+    "test:context": "jest --testPathPattern=context",
+    "test:integration": "jest --testPathPattern=integration",
+    "test:unit": "jest --testPathPattern='(components|hooks|libs|context)' --testPathIgnorePatterns=integration",
+    "test:debug": "jest --runInBand --no-cache --detectOpenHandles"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.6",
     "class-variance-authority": "^0.7.1",
@@ -46,10 +55,13 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.5.2"
   }
 }
