--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,21 @@
+# Informasi Project
 sonar.projectKey=bni-ewallet-frontend
 sonar.projectName=BNI Ewallet Frontend
 sonar.projectVersion=1.0
+
+# Sumber Kode
 sonar.sources=src
 sonar.exclusions=**/*.test.tsx,**/*.test.ts
+sonar.sourceEncoding=UTF-8
+
+# Unit Test & Coverage
 sonar.tests=src
 sonar.test.inclusions=**/*.test.tsx,**/*.test.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.sourceEncoding=UTF-8
+
+# Integrasi JMeter (Performance Test)
+sonar.genericcoverage.reportPaths=results-kong2.jtl
+
+# Server SonarQube
 sonar.host.url=http://localhost:9000
-sonar.login=sqp_5f9fa8533f6730e326b66f680659d79ca8a8a92c
+sonar.login=sqp_c94e7818d6d13235dc7ed270ce1390b945b69118
